<resources>
    <string name="app_name">QCut</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_click_to_sign_up">Don\'t have an account? Click to Sign up!</string>
    <string name="shop_name">Shop Name</string>
    <string name="your_name">Your Name</string>
    <string name="sign_up_to_your_account">Sign up to your account</string>
    <string name="sign_up">Sign Up</string>
    <string name="by_signing_up_you_agree_to_our_terms_and_conditions">By signing up, you agree to our terms and conditions</string>
    <string name="sign_up_upper">SIGN UP</string>
    <string name="sign_in_apper">SIGN IN</string>
    <string name="spend_time_wisely">Spend time Wisely</string>
    <string name="not_waiting_in_queues">Not waiting in queues</string>
    <string name="add_customer">Add Customer</string>
    <string name="add_customer_to_the_waiting_queue">Add customer to the queue</string>
    <string name="enter_your_email">Enter your email address to receive new password.</string>
    <string name="customer_name">Customer Name</string>
    <string name="cancel">Cancel</string>
    <string name="select_barber">Select Barber</string>
    <string name="add_barber">Add Barber</string>
    <string name="add">Add</string>
    <string name="send">Send</string>
    <string name="add_service">Add Service</string>
    <string name="change_password">Change Password</string>
    <string name="service_name">Service Name</string>
    <string name="save">Save</string>
    <string name="online">ONLINE</string>
    <string name="phone_353_87654321">Phone : +353-87654321</string>
    <string name="email_mybarber_gmail_com">Email : mybarber@gmail.com</string>
    <string name="google_map_https_gmap_com_xsrdfnekd">Google Map : https://gmap.com/xsrdfnekd</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email">Email</string>
    <string name="shop_address_line_1">Shop Address Line 1</string>
    <string name="shop_address_line_2">Shop Address Line 2</string>
    <string name="gmap_link">Google Map Link</string>
    <string name="area">Area</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="expensive">Expensive</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="save_profile">Save Profile</string>
    <string name="save_general">Save</string>
    <string name="clonsilla_barbers">Clonsilla Barbers</string>
    <string name="unit_204_clonsilla_rd">Unit 204, Clonsilla Rd</string>
    <string name="dublin_15">Dublin 15</string>
    <string name="start_service">Start Service</string>
    <string name="_10_00_am_6_00_pm">10:00 AM - 6:00 PM</string>
    <string name="monkey_barbers">Monkey Barbers</string>
    <string name="hair_cut">Hair Cut</string>
    <string name="_14_00">$ 14.00</string>
    <string name="skip">Skip</string>
    <string name="nate_miller">Nate Miller</string>
    <string name="is_the_service_done_for">Is the service completed for</string>
    <string name="service_done">Complete Service</string>
    <string name="done">Done</string>
    <string name="do_you_with_to_skip_the_costumer">Want to skip the service for</string>
    <string name="skip_customer">Skip Customer</string>
    <string name="ready_to_start_service_for">Ready to start service for</string>
    <string name="start">Start</string>
    <string name="in_chair">IN CHAIR</string>
    <string name="sandra_adams">Sandra Adams</string>

    <string name="status_online">"ONLINE"</string>
    <string name="status_offline">"OFFLINE"</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>

</resources>
