<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="@android:color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4">



        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/add_customer"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="#FFF"
            android:textSize="@dimen/dialogHeadingTextSize"
            android:background="@color/backgroundItems"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/ready_to_start"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/add_customer_to_the_waiting_queue"
            android:fontFamily="@font/montserrat_light"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dialogNormalTextSize"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/customer_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:backgroundTint="@color/backgroundItems"
            android:hint="@string/customer_name"
            android:fontFamily="@font/montserrat_light"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            ></EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="3"
            android:layout_margin="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_action_service"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/cancel"
                android:textColor="@color/backgroundItems"
                android:textSize="@dimen/buttonCAPTextSize"
                app:backgroundTint="@android:color/white"
                app:rippleColor="#33AAAAAA"
                app:strokeColor="@color/backgroundItems"
                app:strokeWidth="2dp"
                android:layout_weight="1.35"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"></View>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/start_action_service"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/add"
                android:textColor="@android:color/white"
                android:textSize="@dimen/buttonCAPTextSize"
                app:backgroundTint="@color/backgroundItems"
                android:layout_weight="1.35"/>
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>